--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0"
   }
 }
